Fix z-index on footer

--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -8,6 +8,7 @@
     background-color: rgb(61, 61, 61);
     color: white;
     position: relative;
+    z-index: -1;
 }
 
 .footer-list {
